--- a/practice/my google/index.html
+++ b/practice/my google/index.html
@@ -8,32 +8,47 @@
 </head>
 <body>
     <main>
-    <div class="nav-bar">
-        <p class="nav-item">Gmail</p>
-        <p class="nav-item">Images</p>
-        <img class="nav-item nav-icon" src="images/menu_icon.png" alt="menu icon" />
-        <img class="nav-item round-circle" src="images/dp.jpg" />
-     </div>
-     <div>
-        <img class src="images/google_image.png" />
-        <form>
-            <input type="text"><br>
-            <input type="submit" value="Google Search">
-            <input type="submit" value="I'm feeling lucky">
-        </form>
-        <p>Google offered in: Hause Igbo Ede Yoruba Pidgin </p><br>
-        <p>Nigeria</p>
-        <ul style="list-style-type: none;">
-            <li>Advertising</li>
-            <li>Business</li>
-            <li>About</li>
-            <li>How Search works</li>
-            <li>Privacy</li>
-            <li>Terms</li>
-            <li>Settings</li>
-        </ul>
-     </div>
-     
+        <div class="nav-bar">
+            <p class="nav-item">Gmail</p>
+            <p class="nav-item">Images</p>
+            <img class="nav-item nav-icon" src="images/menu_icon.png" alt="menu icon" />
+            <img class="nav-item round-circle" src="images/dp.jpg" />
+        </div>
+        <div class="search-content">
+            <img class src="images/google_image.png" alt="Google" title="google_image"/>
+        
+            <div class="search">
+                <input class="search-bar" type="text" placeholder="Search or type a URL">
+            </div>
+            <div class="button">
+                <a href="#" class="link">Google Search</a>
+                <a href="#" class="link">I'm Feeling Lucky</a>
+            </div>
+
+            <p>Google offered in: 
+                <a href="#">Hausa</a>
+                <a href="#">Igbo</a>
+                <a href="#">Ede Yoruba</a>
+                <a href="#">NIgerian Pidgin</a>
+            </p>
+        </div>
+        <footer>
+            <div class="country">NIgeria</div>
+            <hr>
+            <div class="footer-item">
+                <div class="left">
+                    <a href="#">Advertising</a>
+                    <a href="#">Business</a>
+                    <a href="#">About</a>
+                    <a href="#">How Search Works</a>
+                </div>
+                <div class="right">
+                    <a href="#">Privacy</a>
+                    <a href="#">Terms</a>
+                    <a href="#">Settings</a>
+                </div>
+            </div>
+        </footer>
     </main>
 </body>
 </html>
